Add bundler for interests page.

--- a/src/interests.html
+++ b/src/interests.html
@@ -81,7 +81,7 @@
           >
             <div class="card-past">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_07_Lap1_FreeDiving_Cert\lap1_image.jpg"
+                id="lap1_image"
                 alt="Image of Molchanov's Lap 1 freediving certificate."
                 class="card-past-img"
               />
@@ -99,7 +99,7 @@
           >
             <div class="card-past">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Stoos_Hiking\GOPR0208.JPG"
+                id="GOPR0208"
                 alt="Image of lake surrounded by hills in Stoos Switzerland."
                 class="card-past-img"
               />
@@ -117,7 +117,7 @@
           >
             <div class="card-past">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Grindelwald\IMG_3610_jpg.jpg"
+                id="IMG_3610_jpg"
                 alt="Image of snow mountains in Swtizerland."
                 class="card-past-img"
               />
@@ -133,7 +133,7 @@
           >
             <div class="card-past">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Paris\IMG_3460_jpg.jpg"
+                id="IMG_3460_jpg"
                 alt="Picture of Eiffel Tower."
                 class="card-past-img"
               />
@@ -149,7 +149,7 @@
           >
             <div class="card-past">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_06_Langkawi_Swimming_Festival\0ffab240-b4de-42b9-a214-dd5e276d8ece.jpg"
+                id="langkawi1"
                 alt="Group picture taken from Langkawi Swimming Festival."
                 class="card-past-img"
               />
@@ -165,7 +165,7 @@
           >
             <div class="card-past">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_05_Pulau_Tenggol_FreeDiving_Trip\954950d1-dc3e-4a9d-a8d6-6ce12817cc1c.jpg"
+                id="langkawi2"
                 alt="Group picture taken from Pulau Tenggol diving trip."
                 class="card-past-img"
               />
@@ -183,7 +183,7 @@
           >
             <div class="card-past">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_05_Kapas_Marang_Swimathon\IMG_3293.JPG"
+                id="IMG_3293"
                 alt="Picture of me running towards the finishing line during Kapas Marang Swimathong event."
                 class="card-past-img"
               />
@@ -199,7 +199,7 @@
           >
             <div class="card-past">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_03_PD_FreeAndEasy_SelfTraining\IMG_3155.JPG"
+                id="IMG_3155"
                 alt="Group picture with friends in open water."
                 class="card-past-img"
               />
@@ -215,15 +215,13 @@
           >
             <div class="card-past">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_02_PD_Classic\6b2ed861-61b5-4804-9987-622d30a213ea.jpg"
+                id="pdClassic1"
                 alt="Picture of me holding a finisher medal during the PD swimming race"
                 class="card-past-img"
               />
               <div class="card-past-text">
                 <div class="date">Feb 2024</div>
-                <div class="card-past-header">
-                  The Thistle PD 2km Classic Race
-                </div>
+                <div class="card-past-header">The Thistle PD Classic Race</div>
               </div>
             </div>
           </a>
@@ -233,7 +231,7 @@
           >
             <div class="card-past">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_01_PD_OWS_Clinic\IMG_3048.JPG"
+                id="IMG_3048"
                 alt="Group picture taken during the OWS clinic."
                 class="card-past-img"
               />
@@ -249,15 +247,13 @@
           >
             <div class="card-past">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_Swimming_Squad\squad_1.jpg"
+                id="squad_1"
                 alt="Pictures taken with some of the member in the swimming squad."
                 class="card-past-img"
               />
               <div class="card-past-text">
                 <div class="date">Dec 2023</div>
-                <div class="card-past-header">
-                  MySwim Coaching Swimming Squad
-                </div>
+                <div class="card-past-header">MySwim Swimming Squad</div>
               </div>
             </div>
           </a>
