Create draft bundler for the interests sub pages.

--- a/src/interests_subpages/interests_lap1.html
+++ b/src/interests_subpages/interests_lap1.html
@@ -38,19 +38,13 @@
           </div>
           <div class="card-images">
             <div class="img-wrapper">
-              <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_07_Lap1_FreeDiving_Cert\cert.jpg"
-                alt="Image of Lap 1 Certificate issued to me."
-              />
+              <img id="cert" alt="Image of Lap 1 Certificate issued to me." />
               <div class="img-text">
                 Lap 1 certificate issued under Molchanovs school system.
               </div>
             </div>
             <div class="img-wrapper">
-              <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_FreeDiving_PoolTraining\f110de02-3063-4ac1-bb5b-db4cee5ccdc1.jpg"
-                alt="Image of Lap 1 Certificate issued to me."
-              />
+              <img id="lap1_image1" alt="Image of my training in the pool." />
               <div class="img-text">
                 Pool training with some member of my swimming squad.
               </div>
