--- a/src/interests_subpages/interests_stoosRidgeHike.html
+++ b/src/interests_subpages/interests_stoosRidgeHike.html
@@ -39,35 +39,35 @@
           <div class="card-images">
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Stoos_Hiking\GOPR0208.JPG"
+                id="GOPR0208"
                 alt="Some stunning view during Stoos Ridge hike."
               />
               <div class="img-text"></div>
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Stoos_Hiking\IMG_3726_jpg.jpg"
+                id="IMG_3726_jpg"
                 alt="Some stunning view during Stoos Ridge hike."
               />
               <div class="img-text"></div>
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Stoos_Hiking\IMG_3672_jpg.jpg"
+                id="IMG_3672_jpg"
                 alt="Some stunning view during Stoos Ridge hike."
               />
               <div class="img-text"></div>
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Stoos_Hiking\IMG_3743_jpg.jpg"
+                id="IMG_3743_jpg"
                 alt="Some stunning view during Stoos Ridge hike."
               />
               <div class="img-text"></div>
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Stoos_Hiking\IMG_3762.PNG"
+                id="IMG_3762"
                 alt="Map showing the route taken for the hike."
               />
               <div class="img-text">
