Include bundler for all sub-pages. Sucessful buid for all subpages.

--- a/src/interests.html
+++ b/src/interests.html
@@ -84,6 +84,7 @@
                 id="lap1_image"
                 alt="Image of Molchanov's Lap 1 freediving certificate."
                 class="card-past-img"
+                loading="lazy"
               />
               <div class="card-past-text">
                 <div class="date">July 2024</div>
@@ -102,6 +103,7 @@
                 id="GOPR0208"
                 alt="Image of lake surrounded by hills in Stoos Switzerland."
                 class="card-past-img"
+                loading="lazy"
               />
               <div class="card-past-text">
                 <div class="date">June 2024</div>
@@ -120,6 +122,7 @@
                 id="IMG_3610_jpg"
                 alt="Image of snow mountains in Swtizerland."
                 class="card-past-img"
+                loading="lazy"
               />
               <div class="card-past-text">
                 <div class="date">June 2024</div>
@@ -136,6 +139,7 @@
                 id="IMG_3460_jpg"
                 alt="Picture of Eiffel Tower."
                 class="card-past-img"
+                loading="lazy"
               />
               <div class="card-past-text">
                 <div class="date">June 2024</div>
@@ -152,6 +156,7 @@
                 id="langkawi1"
                 alt="Group picture taken from Langkawi Swimming Festival."
                 class="card-past-img"
+                loading="lazy"
               />
               <div class="card-past-text">
                 <div class="date">June 2024</div>
@@ -168,6 +173,7 @@
                 id="langkawi2"
                 alt="Group picture taken from Pulau Tenggol diving trip."
                 class="card-past-img"
+                loading="lazy"
               />
               <div class="card-past-text">
                 <div class="date">May 2024</div>
@@ -186,6 +192,7 @@
                 id="IMG_3293"
                 alt="Picture of me running towards the finishing line during Kapas Marang Swimathong event."
                 class="card-past-img"
+                loading="lazy"
               />
               <div class="card-past-text">
                 <div class="date">May 2024</div>
@@ -202,6 +209,7 @@
                 id="IMG_3155"
                 alt="Group picture with friends in open water."
                 class="card-past-img"
+                loading="lazy"
               />
               <div class="card-past-text">
                 <div class="date">March 2024</div>
@@ -218,6 +226,7 @@
                 id="pdClassic1"
                 alt="Picture of me holding a finisher medal during the PD swimming race"
                 class="card-past-img"
+                loading="lazy"
               />
               <div class="card-past-text">
                 <div class="date">Feb 2024</div>
@@ -234,6 +243,7 @@
                 id="IMG_3048"
                 alt="Group picture taken during the OWS clinic."
                 class="card-past-img"
+                loading="lazy"
               />
               <div class="card-past-text">
                 <div class="date">Jan 2024</div>
@@ -250,6 +260,7 @@
                 id="squad_1"
                 alt="Pictures taken with some of the member in the swimming squad."
                 class="card-past-img"
+                loading="lazy"
               />
               <div class="card-past-text">
                 <div class="date">Dec 2023</div>
