--- a/src/interests_subpages/interests_OWSClinic.html
+++ b/src/interests_subpages/interests_OWSClinic.html
@@ -38,8 +38,9 @@
           <div class="card-images">
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_01_PD_OWS_Clinic\IMG_3048.JPG"
+                id="IMG_3048"
                 alt="Group photo with fellow swimmers at the beach."
+                loading="lazy"
               />
               <div class="img-text">
                 Group photo with fellow swimmers who participated in the clinic.
@@ -47,16 +48,17 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_01_PD_OWS_Clinic\IMG_3044.JPG"
+                id="IMG_3044"
                 alt="Picture of me warming up with a buddy swimmer."
+                loading="lazy"
               />
               <div class="img-text">Warm-up before we start our training.</div>
             </div>
-
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_01_PD_OWS_Clinic\IMG_3046.JPG"
+                id="IMG_3046"
                 alt="Picture of me entering the sea."
+                loading="lazy"
               />
               <div class="img-text">
                 Entering the sea for training, I was curious to see if I could
