--- a/src/interests_subpages/interests_PDClassic.html
+++ b/src/interests_subpages/interests_PDClassic.html
@@ -39,16 +39,14 @@
           <div class="card-images">
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_02_PD_Classic\6b2ed861-61b5-4804-9987-622d30a213ea.jpg"
+                id="6b2ed861-61b5-4804-9987-622d30a213ea"
                 alt="Picture of me with the finisher medal."
+                loading="lazy"
               />
               <div class="img-text">Picture of me with the finisher medal.</div>
             </div>
             <div class="img-wrapper">
-              <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_02_PD_Classic\IMG_3101.PNG"
-                alt="Results from my swim."
-              />
+              <img id="IMG_3101" alt="Results from my swim." loading="lazy" />
               <div class="img-text">
                 Result from my swim. This is my first open water swimming event
                 - and I am happy with the pace of my swim.
@@ -58,8 +56,7 @@
               <iframe src="https://www.youtube.com/embed/Rj4GxcssYcY"> </iframe>
               <div class="img-text">
                 Swimming towards the finish line. You can tell how inexperienced
-                I was by the way I walked (instead of running) to the finish
-                <span class="emoji">&#128517;</span>.
+                I was by the way I walked (instead of running) to the finish.
               </div>
             </div>
           </div>
