--- a/src/interests_subpages/interests_PDFreeAndEasy.html
+++ b/src/interests_subpages/interests_PDFreeAndEasy.html
@@ -38,8 +38,9 @@
           <div class="card-images">
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_03_PD_FreeAndEasy_SelfTraining\IMG_3155.JPG"
-                alt="Group photo with our escort kayakers during one of our break."
+                id="IMG_3155"
+                alt="Group photo with our escort kayakers during one of our breaks."
+                loading="lazy"
               />
               <div class="img-text">
                 Group photo with our escort kayakers during one of our breaks.
@@ -47,20 +48,20 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_03_PD_FreeAndEasy_SelfTraining\IMG_3154.JPG"
-                alt="Stunning ariel view of our last checkpoint before we swim back
-                to our starting point."
+                id="IMG_3154"
+                alt="Stunning ariel view of our last checkpoint before we swim back to our starting point."
+                loading="lazy"
               />
               <div class="img-text">
                 Stunning ariel view of our last checkpoint before we swim back
                 to our starting point.
               </div>
             </div>
-
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_03_PD_FreeAndEasy_SelfTraining\IMG_3153.JPG"
+                id="IMG_3153"
                 alt="Aerial view of one of our swimming courses."
+                loading="lazy"
               />
               <div class="img-text">
                 Aerial view of one of our swimming courses.
@@ -68,8 +69,9 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_03_PD_FreeAndEasy_SelfTraining\IMG_3149_jpg.jpg"
+                id="IMG_3149_jpg"
                 alt="Picture of beach - the starting point."
+                loading="lazy"
               />
               <div class="img-text">The starting point.</div>
             </div>
