--- a/src/interests_subpages/interests_PulauTenggolDivingTrip.html
+++ b/src/interests_subpages/interests_PulauTenggolDivingTrip.html
@@ -39,8 +39,9 @@
           <div class="card-images">
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_05_Pulau_Tenggol_FreeDiving_Trip\954950d1-dc3e-4a9d-a8d6-6ce12817cc1c.jpg"
+                id="954950d1-dc3e-4a9d-a8d6-6ce12817cc1c"
                 alt="Group picture before we start our training at the open sea."
+                loading="lazy"
               />
               <div class="img-text">
                 Group picture before we start our training at the open sea.
@@ -48,18 +49,19 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_05_Pulau_Tenggol_FreeDiving_Trip\2345c4d7-1ab3-4680-a77d-dc1a3993ba0d.jpg"
+                id="2345c4d7-1ab3-4680-a77d-dc1a3993ba0d"
                 alt="Group photo of one of our hike."
+                loading="lazy"
               />
               <div class="img-text">
                 We went for a short hike during one of our free time.
               </div>
             </div>
-
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_05_Pulau_Tenggol_FreeDiving_Trip\GOPR0066_adj.JPG"
+                id="GOPR0066_adj"
                 alt="Picture with friends at the open sea."
+                loading="lazy"
               />
               <div class="img-text">
                 We can't miss the opportunity to do some swimming session at the
@@ -68,8 +70,9 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_05_Pulau_Tenggol_FreeDiving_Trip\GOPR0072.JPG"
+                id="GOPR0072"
                 alt="Picture with friends at the open sea - overlooking sunset."
+                loading="lazy"
               />
               <div class="img-text">
                 Great view of the sunset. One of my best swimming experience.
