--- a/src/interests_subpages/interests_kapasMarangSwimathon.html
+++ b/src/interests_subpages/interests_kapasMarangSwimathon.html
@@ -40,8 +40,9 @@
           <div class="card-images">
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_05_Kapas_Marang_Swimathon\IMG_3293.JPG"
+                id="IMG_3293"
                 alt="Crossing the finish line with a tired face."
+                loading="lazy"
               />
               <div class="img-text">
                 Crossing the finishing line with a tired face (picture from
@@ -50,16 +51,17 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_05_Kapas_Marang_Swimathon\0f2d50fd-7f4d-442e-97a3-10856118b3c5.jpg"
+                id="0f2d50fd-7f4d-442e-97a3-10856118b3c5"
                 alt="Results from my swim."
+                loading="lazy"
               />
               <div class="img-text">Result from my swim.</div>
             </div>
-
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_05_Kapas_Marang_Swimathon\IMG_3281_jpg.jpg"
-                alt="Picture with first place throphy."
+                id="IMG_3281_jpg"
+                alt="The famous ‘Mount Fuji’ as reference for our sighting."
+                loading="lazy"
               />
               <div class="img-text">
                 The famous ‘Mount Fuji’ as reference for our sighting.
@@ -67,8 +69,9 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_05_Kapas_Marang_Swimathon\IMG_3283_jpg.jpg"
-                alt="Picture with first place throphy."
+                id="IMG_3283_jpg"
+                alt="Our accommodation in Pulau Kapas - KBC Hans Chalets."
+                loading="lazy"
               />
               <div class="img-text">
                 Our accommodation in Pulau Kapas - KBC Hans Chalets.
