--- a/src/interests_subpages/interests_langkawiSwimFest.html
+++ b/src/interests_subpages/interests_langkawiSwimFest.html
@@ -39,26 +39,28 @@
           <div class="card-images">
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_06_Langkawi_Swimming_Festival\0ffab240-b4de-42b9-a214-dd5e276d8ece.jpg"
+                id="0ffab240-b4de-42b9-a214-dd5e276d8ece"
                 alt="Team picture before the swim."
+                loading="lazy"
               />
               <div class="img-text">Team picture before the swim.</div>
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_06_Langkawi_Swimming_Festival\Screenshot 2024-07-07 213627.png"
+                id="Screenshot_2024-07-07_213627"
                 alt="Results from my swim."
+                loading="lazy"
               />
               <div class="img-text">
                 Result from my swim. This is my first ever podium win - and I am
                 happy that I have managed to get first place.
               </div>
             </div>
-
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_06_Langkawi_Swimming_Festival\IMG_6100_jpg.jpg"
+                id="IMG_6100_jpg"
                 alt="Picture with first place throphy."
+                loading="lazy"
               />
               <div class="img-text">
                 Picture of me with the first place throphy.
@@ -66,8 +68,9 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_06_Langkawi_Swimming_Festival\020dcfa6-555d-45b3-ac50-b54d1bc6f17c.jpg"
+                id="020dcfa6-555d-45b3-ac50-b54d1bc6f17c"
                 alt="Team celebrating our wins and accomplishment."
+                loading="lazy"
               />
               <div class="img-text">
                 Team celebrating our wins and accomplishment.
@@ -82,7 +85,7 @@
             <div class="img-wrapper">
               <iframe src="https://www.youtube.com/embed/IwNF_XYWTWc"> </iframe>
               <div class="img-text">
-                Receiving the first place thropy for my category.
+                Receiving the first place throphy for my category.
               </div>
             </div>
           </div>
