--- a/src/interests_subpages/interests_lap1.html
+++ b/src/interests_subpages/interests_lap1.html
@@ -38,13 +38,21 @@
           </div>
           <div class="card-images">
             <div class="img-wrapper">
-              <img id="cert" alt="Image of Lap 1 Certificate issued to me." />
+              <img
+                id="cert"
+                alt="Image of Lap 1 Certificate issued to me."
+                loading="lazy"
+              />
               <div class="img-text">
                 Lap 1 certificate issued under Molchanovs school system.
               </div>
             </div>
             <div class="img-wrapper">
-              <img id="lap1_image1" alt="Image of my training in the pool." />
+              <img
+                id="lap1_image1"
+                alt="Image of my training in the pool."
+                loading="lazy"
+              />
               <div class="img-text">
                 Pool training with some member of my swimming squad.
               </div>
