--- a/src/interests_subpages/interests_swimSquad.html
+++ b/src/interests_subpages/interests_swimSquad.html
@@ -41,23 +41,25 @@
           <div class="card-images">
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_Swimming_Squad\squad_1.jpg"
+                id="squad_1"
                 alt="Picture with fellow teammate in a pool."
+                loading="lazy"
               />
               <div class="img-text">With some members of the squad.</div>
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_Swimming_Squad\e0cb4eca-3868-40be-a697-e2381a334a02.jpg"
+                id="e0cb4eca-3868-40be-a697-e2381a334a02"
                 alt="Picture with fellow teammate in a pool."
+                loading="lazy"
               />
               <div class="img-text">With some members of the squad.</div>
             </div>
-
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_Swimming_Squad\IMG_3820.JPG"
+                id="IMG_3820"
                 alt="Picture with squad members celebrating Chinese New Year."
+                loading="lazy"
               />
               <div class="img-text">
                 Big gathering of squad members to celebrate Chinese New Year.
@@ -65,8 +67,9 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_Swimming_Squad\4a3ef765-713d-4a74-9371-c342914e52cb.jpg"
+                id="4a3ef765-713d-4a74-9371-c342914e52cb"
                 alt="Group photo at the pool."
+                loading="lazy"
               />
               <div class="img-text">
                 Ramadhan Squad – we switched our training to nighttime during
@@ -82,15 +85,17 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_Swimming_Squad\IMG_3818.JPG"
+                id="IMG_3818"
                 alt="Group photo at the pool."
+                loading="lazy"
               />
               <div class="img-text">More group photo with squad members.</div>
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Swimming\2024_Swimming_Squad\IMG_3823.JPG"
+                id="IMG_3823"
                 alt="Group photo at the pool."
+                loading="lazy"
               />
               <div class="img-text">
                 Safety first - CPR and AED skill sharing session.
