--- a/src/interests_subpages/interests_tripFrance.html
+++ b/src/interests_subpages/interests_tripFrance.html
@@ -38,19 +38,20 @@
           <div class="card-images">
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Paris\IMG_3460_jpg.jpg"
+                id="IMG_3460_jpg"
                 alt="Picture of Eiffel Tower."
+                loading="lazy"
               />
               <div class="img-text">
                 Went to see the most iconic structure in Paris - the Eiffel
                 Tower.
               </div>
             </div>
-
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Paris\IMG_3471_jpg.jpg"
+                id="IMG_3471_jpg"
                 alt="View of Paris from Sacré-Coeur."
+                loading="lazy"
               />
               <div class="img-text">View of Paris from Sacré-Coeur.</div>
             </div>
@@ -60,9 +61,9 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Paris\IMG_3447_jpg.jpg
-                "
+                id="IMG_3447_jpg"
                 alt="Picture at the Louvre."
+                loading="lazy"
               />
               <div class="img-text">
                 Went to see painting of Mona Lisa at the Louvre.
@@ -70,8 +71,9 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Strasbourg\IMG_3495_jpg.jpg"
+                id="IMG_3495_jpg"
                 alt="View from our hotel (the attic room) in Strausbourg."
+                loading="lazy"
               />
               <div class="img-text">
                 View from our hotel (the attic room) in Strausbourg.
