--- a/src/interests_subpages/interests_tripSwiss.html
+++ b/src/interests_subpages/interests_tripSwiss.html
@@ -38,8 +38,9 @@
           <div class="card-images">
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Grindelwald\IMG_3610_jpg.jpg"
+                id="IMG_3610_jpg"
                 alt="View from Jungfraujoch - the top of Europe."
+                loading="lazy"
               />
               <div class="img-text">
                 View from Jungfraujoch - the top of Europe.
@@ -53,8 +54,9 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Brunnen\IMG_3753_jpg.jpg"
+                id="IMG_3753_jpg"
                 alt="View from our hotel balcony in Brunnen."
+                loading="lazy"
               />
               <div class="img-text">
                 View from our hotel balcony in Brunnen.
@@ -62,16 +64,17 @@
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Saint_Mortiz\IMG_3536_jpg.jpg
-                "
+                id="IMG_3536_jpg"
                 alt="View from our hotel in St Moritz."
+                loading="lazy"
               />
               <div class="img-text">View from our hotel in St Moritz.</div>
             </div>
             <div class="img-wrapper">
               <img
-                src="C:\Users\ibrah\OneDrive\Pictures\Europe Trip 2024\Grindelwald\IMG_3649_jpg.jpg"
+                id="IMG_3649_jpg"
                 alt="View in Grindelwald."
+                loading="lazy"
               />
               <div class="img-text">View in Grindelwald.</div>
             </div>
