--- a/src/interests_subpages/interests_stoosRidgeHike.html
+++ b/src/interests_subpages/interests_stoosRidgeHike.html
@@ -41,6 +41,7 @@
               <img
                 id="GOPR0208"
                 alt="Some stunning view during Stoos Ridge hike."
+                loading="lazy"
               />
               <div class="img-text"></div>
             </div>
@@ -48,6 +49,7 @@
               <img
                 id="IMG_3726_jpg"
                 alt="Some stunning view during Stoos Ridge hike."
+                loading="lazy"
               />
               <div class="img-text"></div>
             </div>
@@ -55,6 +57,7 @@
               <img
                 id="IMG_3672_jpg"
                 alt="Some stunning view during Stoos Ridge hike."
+                loading="lazy"
               />
               <div class="img-text"></div>
             </div>
@@ -62,6 +65,7 @@
               <img
                 id="IMG_3743_jpg"
                 alt="Some stunning view during Stoos Ridge hike."
+                loading="lazy"
               />
               <div class="img-text"></div>
             </div>
@@ -69,6 +73,7 @@
               <img
                 id="IMG_3762"
                 alt="Map showing the route taken for the hike."
+                loading="lazy"
               />
               <div class="img-text">
                 Map showing the route taken for the hike.
